--- a/html/index.html
+++ b/html/index.html
@@ -9,11 +9,12 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css"/>    
   </head>
   <body>    
-    <div id="map"></div>    
-    <script src="//cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>    
-    <script src='http://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.standalone.js'></script>
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="http://libs.cartocdn.com/cartodb.js/v3/cartodb.noleaflet.js"></script>
+    <div id="map"></div>
+
+    <!-- javascript libraries -->
+    <script src="//libs.cartodb.com/cartodb.js/v3/3.14/cartodb.js"></script>
+
+    <!-- main code -->
     <script src="js/main.js"></script>
   </body>
 </html>
