update ui position

--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css"/>    
   </head>
   <body>
-    <div id="ui-container" class="ui">
+    <div id="ui-survey" class="ui survey">
       <h4>Participatory Mapping Survey Data</h4>
       <!-- <h4 class="es">Capas de Propiedad</h4> -->
       <br/>
