update survey properties buttons

--- a/html/index.html
+++ b/html/index.html
@@ -20,7 +20,7 @@
       <!-- <h4 class="es">Capas de Propiedad</h4> -->
       <br/>
       <a href="#allLots" id="allLots" class="button">
-        <span class="en">All Survey Lots</span>
+        <span class="en">All Survey Properties</span>
         <span class="es"></span>
       </a>
       <a href="#allVacant" id="allVacant" class="button">
